# raflow

./: CLAUDE.md  Cargo.toml  index.html  overlay.html  package.json  pnpm-lock.yaml  vite.config.ts
specs/: 0001-spec.md  0002-design.md  0003-implementation-plan.md  P1-T1-COMPLETION.md  P1-T2-COMPLETION.md  P1-T3-COMPLETION.md  P1-T4-COMPLETION.md  P1-T5-COMPLETION.md  P1-T6-COMPLETION.md  P1-T7-COMPLETION.md  P1-T8-COMPLETION.md  P2-T1-COMPLETION.md  PHASE0-COMPLETION.md  instruction.md
src/: App.tsx  overlay.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_audio.rs  test_input.rs  test_state.rs  test_transcription.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  tray.rs
src-tauri/src/audio/: buffer.rs  capture.rs  device.rs  error.rs  mod.rs  pipeline.rs  resampler.rs
src-tauri/src/commands/: config.rs  mod.rs  state.rs  window.rs
src-tauri/src/hotkey/: config.rs  error.rs  handlers.rs  mod.rs  register.rs  session.rs
src-tauri/src/input/: clipboard.rs  error.rs  injector.rs  keyboard.rs  mod.rs  window.rs
src-tauri/src/input/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/network/: connection.rs  error.rs  messages.rs  mod.rs  tasks.rs
src-tauri/src/session/: mod.rs
src-tauri/src/state/: app_state.rs  config.rs  error.rs  mod.rs  transitions.rs
src-tauri/src/transcription/: mod.rs
src-tauri/src/utils/: error.rs  logging.rs  logging_test.rs  mod.rs
src-tauri/tests/: audio_capture_test.rs  audio_device_test.rs  audio_pipeline_test.rs  audio_resampler_test.rs  hotkey_test.rs  input_clipboard_test.rs  input_injector_test.rs  input_keyboard_test.rs  input_window_test.rs  integration_test.rs  network_connection_test.rs  network_messages_test.rs  network_tasks_test.rs  phase3_ui_test.rs  session_test.rs  state_test.rs  transcription_e2e_test.rs
src/components/Overlay/: Overlay.css  StatusIndicator.tsx  TranscriptDisplay.tsx  Waveform.tsx  index.tsx
src/components/Settings/: Settings.css  index.tsx
